# opensoldat

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE.md  README.md
.github/workflows/: copy-libs.sh  macos-fix-libs.sh  main.yml  make-appimage  make-appimage.sh  opensoldat.yml  soldat.yml
client/: BinPack.pas  CMakeLists.txt  Client.pas  ClientCommands.pas  ClientGame.pas  ClientLauncherIPC.pas  ControlGame.pas  FileClient.pas  GameMenus.pas  GameRendering.pas  GameStrings.pas  Gfx.pas  GostekGraphics.inc  GostekGraphics.pas  Input.pas  InterfaceGraphics.pas  MainMenuRendering.pas  Makefile  MapGraphics.pas  Sound.pas  UpdateFrame.pas  WeatherEffects.pas  opensoldat.ico.xcf  opensoldat.lpi  opensoldat.lpr  opensoldat.res  soldat.lpi  soldat.lpr  soldat.res
client/libs/FreeType/: freetype.pas
client/libs/FreeType/check/: c_check.c  c_check.h.in  check.sh  data.h  pas_check.pas.in
client/libs/dglOpenGL/: LICENSE  README.md  dglOpenGL.html  dglOpenGL.pas
client/libs/openal/: alch.inc  alexth.inc  alh.inc  openal.pas
client/libs/stb/: CMakeLists.txt  build.bat  makefile  stb.pas
client/libs/stb/proj/: stb.def  stb.sln  stb.vcxproj  stb.vcxproj.filters
client/libs/stb/src/: stb.c  stb_image_resize.h
client/macOS/: Info.plist  create_bundle.sh  setup_lib_links.sh  soldat.entitlements
client/macOS/Frameworks/: .gitignore  README.md
client/utils/: create_pot.sh
cmake_modules/: CMakeDeterminePascalCompiler.cmake  CMakePascalCompiler.cmake.in  CMakePascalInformation.cmake  CMakeTestPascalCompiler.cmake  OpenSoldatAssets.cmake  SoldatAssets.cmake  utils.cmake
server/: BanSystem.pas  CMakeLists.txt  FileServer.pas  LobbyClient.pas  Main.pas  Makefile  Rcon.pas  Server.pas  ServerCommands.pas  ServerHelper.pas  ServerLauncherIPC.pas  ServerLoop.pas  opensoldatserver.lpi  opensoldatserver.lpr  soldatserver.lpi  soldatserver.lpr
server/scriptcore/: MyInterfacedObject.pas  PascalCompiler.pas  PascalCore.pas  PascalDebugger.pas  PascalExec.pas  Script.pas  ScriptBanLists.pas  ScriptBullet.pas  ScriptCore.pas  ScriptCore3.pas  ScriptCore3Api.pas  ScriptCoreAPIAdapter.pas  ScriptCoreFunctions.pas  ScriptCoreInterface.pas  ScriptDateUtils.pas  ScriptDispatcher.pas  ScriptExceptions.pas  ScriptFileAPI.pas  ScriptGame.pas  ScriptGlobal.pas  ScriptMap.pas  ScriptMapsList.pas  ScriptMath.pas  ScriptObject.pas  ScriptPlayer.pas  ScriptPlayers.pas  ScriptSpawnPoint.pas  ScriptTeam.pas  ScriptUnit.pas  ScriptWeapon.pas
server/scriptcore/test/: .gitignore  CMakeLists.txt  README.md  gen_ffi_tests.py
server/scriptcore/test/bft/: bft.pas  config.ini
server/scriptcore/test/ffi/: .gitignore  config.ini
shared/: AI.pas  Anims.pas  AutoUpdater.pas  Calc.pas  Command.pas  Console.pas  Constants.pas  Cvar.pas  Demo.pas  Game.pas  LauncherConnection.pas  LauncherIPC.pas  LauncherMessages.pas  LogFile.pas  MapFile.pas  Parts.pas  PolyMap.pas  SharedConfig.pas  TraceLog.pas  Util.pas  Vector.pas  Version.pas  Version.txt  VersionLong.txt  Waypoints.pas  Weapons.pas  gfx.inc  gfx.inc.in  gfx.sh
shared/libs/: BitStream.pas
shared/libs/EOS/: CMakeLists.txt  eos.pas  eos_anticheatclient.pas  eos_anticheatclient_types.pas  eos_anticheatcommon_types.pas  eos_anticheatserver.pas  eos_anticheatserver_types.pas  eos_base.pas  eos_connect.pas  eos_connect_types.pas  eos_init.pas  eos_logging.pas  eos_result.pas  eos_sdk.pas  eos_types.pas  eos_windows.pas
shared/libs/EOS/utils/: Settings.json  anticheat_integritytool.cfg
shared/libs/GameNetworkingSockets/: CMakeLists.txt  GameNetworkingSockets.pas
shared/libs/KrakenSDK/: COPYING  FaeBase.pas  FaeClient.pas  FaeRemoteAttestation.pas
shared/libs/KrakenSDK/src/check/: build_linux.sh  build_linux_m32.sh  build_linux_m64.sh  build_macos.sh  dllmain.c  faecheck.c  faecheck.def  faecheck.h  faecheck.vcxproj  faecheck.vcxproj.filters  rand.h  rand_posix.c  rand_win32.c  resources.rc  version.h
shared/libs/KrakenSDK/src/shared/: monocypher.c  monocypher.h
shared/libs/PhysFS/: PhysFS.pas
shared/libs/SteamWrapper/: README.md  Steam.pas  SteamTypes.pas  gen_steam_bindings.py  gns_functions.txt  make_gns_functions_list.sh
shared/mechanics/: Bullets.pas  Control.pas  Sparks.pas  Sprites.pas  Things.pas
shared/network/: Net.pas  NetworkClientBullet.pas  NetworkClientConnection.pas  NetworkClientFae.pas  NetworkClientFunctions.pas  NetworkClientGame.pas  NetworkClientHeartbeat.pas  NetworkClientMessages.pas  NetworkClientSprite.pas  NetworkClientThing.pas  NetworkServerBullet.pas  NetworkServerConnection.pas  NetworkServerFae.pas  NetworkServerFunctions.pas  NetworkServerGame.pas  NetworkServerHeartbeat.pas  NetworkServerMessages.pas  NetworkServerSprite.pas  NetworkServerThing.pas  NetworkUtils.pas
